#the application icon
iconsdir=$(datadir)/gnome-shell/extensions/obmin@konkor/data/icons
icons_DATA= \
    obmin-off.png \
    obmin-on.png \
    pp.png

#the application icon
appicondir=$(datadir)/icons/hicolor/scalable/apps
appicon_DATA=obmin.svg

EXTRA_DIST = \
        $(icons_DATA) \
        $(appicon_DATA)

