#themes
classicdir=$(datadir)/gnome-shell/extensions/obmin@konkor/data/themes/classic
classic_DATA= \
    classic/home.png \
    classic/style.css

defdir=$(datadir)/gnome-shell/extensions/obmin@konkor/data/themes/default
def_DATA= \
    default/home.png \
    default/style.css

darkdir=$(datadir)/gnome-shell/extensions/obmin@konkor/data/themes/dark
dark_DATA= \
    dark/home.png \
    dark/style.css

lightdir=$(datadir)/gnome-shell/extensions/obmin@konkor/data/themes/light
light_DATA= \
    light/home.png \
    light/style.css

EXTRA_DIST = \
        $(classic_DATA) \
        $(dark_DATA) \
        $(light_DATA) \
        $(def_DATA)

