#themes
bluedir=$(datadir)/gnome-shell/extensions/obmin@konkor/data/themes/blue
blue_DATA= \
    blue/obmin.css

defsdir=$(datadir)/gnome-shell/extensions/obmin@konkor/data/themes/default
defs_DATA= \
    default/obmin.css

graydir=$(datadir)/gnome-shell/extensions/obmin@konkor/data/themes/gray
gray_DATA= \
    gray/obmin.css

mintdir=$(datadir)/gnome-shell/extensions/obmin@konkor/data/themes/mint
mint_DATA= \
    mint/obmin.css

dark_orangedir=$(datadir)/gnome-shell/extensions/obmin@konkor/data/themes/dark-orange
dark_orange_DATA= \
    dark-orange/obmin.css

sysdir=$(datadir)/gnome-shell/extensions/obmin@konkor/data/themes/system
sys_DATA= \
    system/obmin.css

EXTRA_DIST = \
        $(blue_DATA) \
        $(gray_DATA) \
        $(mint_DATA) \
        $(dark_orange_DATA) \
        $(sys_DATA) \
        $(defs_DATA)

