#content themes
classicdir=$(datadir)/gnome-shell/extensions/obmin@konkor/data/www/themes/classic
classic_DATA= \
    classic/home.png \
    classic/style.css

defdir=$(datadir)/gnome-shell/extensions/obmin@konkor/data/www/themes/default
def_DATA= \
    default/home.png \
    default/style.css

darkdir=$(datadir)/gnome-shell/extensions/obmin@konkor/data/www/themes/dark
dark_DATA= \
    dark/home.png \
    dark/style.css

lightdir=$(datadir)/gnome-shell/extensions/obmin@konkor/data/www/themes/light
light_DATA= \
    light/home.png \
    light/style.css

mintdir=$(datadir)/gnome-shell/extensions/obmin@konkor/data/www/themes/mint
mint_DATA= \
    mint/home.png \
    mint/style.css

EXTRA_DIST = \
        $(classic_DATA) \
        $(dark_DATA) \
        $(light_DATA) \
        $(mint_DATA) \
        $(def_DATA)

